--- a/docs/00.md
+++ b/docs/00.md
@@ -2,12 +2,23 @@
 title: Snowpack
 description: A CDN for modern JavaScript packages on npm.
 layout: layouts/blank.njk
+
+# Using Snowpack? Want to be features on snowpack.dev?
+# Add your project, organization, or company name here!
+usersList:
+  - ia:
+    name: The Internet Archive
+    img: https://upload.wikimedia.org/wikipedia/commons/thumb/8/84/Internet_Archive_logo_and_wordmark.svg/1200px-Internet_Archive_logo_and_wordmark.svg.png
+    url: https://github.com/internetarchive/dweb-archive
+  - pika:
+    name: Pika.dev
+    img: https://www.pika.dev/static/img/logo5.svg
+    url: https://www.pika.dev
 ---
 
 # Snowpack
 
 <p style='font-size: 32px; font-weight: 200; line-height: 1.1;'>Build web applications with less tooling and 10x faster iteration.</p>
-
 
 ```
 $ npx snowpack
